# cpp

./: README.md
.github/workflows/: qodana_code_quality.yml
HelloWorld/: .gitignore  CMakeLists.txt  build_and_run.sh  run_coverage.sh
HelloWorld/include/: binary_tree.h  doubly_linked_list.h  functions.h  singly_linked_list.h
HelloWorld/src/: binary_tree.cpp  doubly_linked_list.cpp  functions.cpp  main.cpp  singly_linked_list.cpp
HelloWorld/test/: main_test.cpp
test-hello/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
